@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/apr-util
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.109 2008/06/15 16:21:55 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.110 2008/06/23 18:06:30 hollow Exp $
+
+*apr-util-1.3.2 (23 Jun 2008)
+
+  23 Jun 2008; Benedikt Böhm <hollow@gentoo.org> +apr-util-1.3.2.ebuild:
+  version bump wrt #228953
 
   15 Jun 2008; Benedikt Böhm <hollow@gentoo.org> apr-util-1.2.12.ebuild,
   apr-util-1.3.0.ebuild:
